--- a/style.css
+++ b/style.css
@@ -148,26 +148,25 @@ padding-bottom:10px;
 }
 .modal{
     position:fixed;
-   /*  top:50%;
-    left:50%;
-    */
+
     transform: translate(-50% -50%);
     z-index:3;
     border-radius:12px;
     max-width:80%;
         width:220px;
-        height:180px;
+        height:160px;
       
         display:flex;
         align-items:center;
         justify-content: center;
         flex-direction: column;
         background:  linear-gradient(to right,rgb(172, 62, 112),purple) !important; 
-        gap:14px;
+         gap:14px; 
     font-size:1.5em;
+    text-align:center;
     
 }
-.modal-title{
+#modalTitle{
     font-weight:bold;
 }
 #reset{
@@ -177,6 +176,7 @@ padding-bottom:10px;
     width:70%;
   font-size:0.75em;
   cursor:pointer;
+  margin-top:16px;
 
 }
 .overlay{
@@ -186,4 +186,10 @@ padding-bottom:10px;
     right:0;
     bottom:0;
     z-index:2;
+}
+.active{
+    display:block;
+}
+.inactive{
+    display:none;
 }
