--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Mobile first design */
+/* I am really bad at responsive design*/
 
 /* css reset */
 html{
@@ -58,10 +58,6 @@ span{
 }
 
 .bgcolor{
-  /*   display:flex;
-    flex-direction:column;
-    justify-content: space-between;
-  align-items: center; */
     box-shadow:inset 0 0 0 200px rgba(255,255,255,0.08);
     border-top:2px solid rgba(225,225,225,0.3);
     border-left:2px solid rgba(225,225,225,0.1);
